--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    HOLA MUNDO
+<style>
+   
+</style>
+<body>git 
+    <h1>HOLA MUNDO
+        <h2> Mi primera web
 </body>
 </html>
