Añadiendo archivo readme

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>Document</title>
 </head>
 <style>
-   
+   h1 {
+    color: aqua;
+   }
 </style>
-<body>git 
+<body>
     <h1>HOLA MUNDO
         <h2> Mi primera web
             <h3> Enrique Ivan 
