--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
             <h3> Enrique Ivan 
 
                 <h1> soy ingeniero de sistemas
+                    <h2> tengo 32 años
 </body>
 </html>
