--- a/Semana01/Dia01-github/index.html
+++ b/Semana01/Dia01-github/index.html
@@ -18,6 +18,6 @@
             <h3> Enrique Ivan 
 
                 <h1> soy ingeniero de sistemas
-                    <h2> tengo 32 años
-</body>
+<h4> esta es una modificacion en la rama
+                </body>
 </html>
