--- a/Semana01/Dia01-github/index.html
+++ b/Semana01/Dia01-github/index.html
@@ -17,7 +17,7 @@
         <h2> Mi primera web
             <h3> Enrique Ivan 
 
-                <h1> soy ingeniero de sistemas
+                <h1> soy ingeniero de sistemas e informatica
 <h4> esta es una modificacion en la rama
                 </body>
 </html>
