--- a/Semana02/formulariostablasyotros/index2.html
+++ b/Semana02/formulariostablasyotros/index2.html
@@ -13,7 +13,7 @@
             <h2> input tipo fecha
           <label>
             Input tipe datetime-local (Fecha y hora)
-            <input type="datetime-local" >
+            <input type="datetime-local" />
           </label>
           <label>
             Input tipe dia
@@ -36,7 +36,7 @@
             
             <h2> Combos </h2>
             <label>    
-            <select>
+            <select name="comidas">
                 <option value="">Selecciona tu comida favorita...</option>
                 <option value="fr">Comida Francesa</option>
                 <option value="it">Comida italiana</option>
@@ -45,6 +45,7 @@
             </label>
             <input  type="submit" value="Guardar">  
         </form>
+
         <form>
             <h2> checkbox </h2>
             <h3> Lenguaje de preferencia</h3>
@@ -52,9 +53,14 @@
                 <input type="checkbox" name="english" checked> ingles
             </label>
             <label>
-                <input type="checkbox" name="español" checked> despañol
+                <input type="checkbox" name="español" checked> español
             </label>
+            <label>
+                <input type="checkbox" name="frances"> frances
+            </label>
+            
         </form>
+
     </main>
 </body>
 </html>
