--- a/Semana02/formulariostablasyotros/index2.html
+++ b/Semana02/formulariostablasyotros/index2.html
@@ -50,15 +50,46 @@
             <h2> checkbox </h2>
             <h3> Lenguaje de preferencia</h3>
             <label>
-                <input type="checkbox" name="english" checked> ingles
+                <input type="checkbox" name="english" value="en" checked> ingles
             </label>
             <label>
-                <input type="checkbox" name="español" checked> español
+                <input type="checkbox" name="español" value="es" checked> español
             </label>
             <label>
-                <input type="checkbox" name="frances"> frances
+                <input type="checkbox" name="frances" value="fr"> frances
             </label>
+            <input type="submit" value="Guardar">
             
+        </form>
+
+        <form>
+            <h2> Radio buttons</h2>
+            <label>
+                <input type="radio" name="Lenguaje" value="en"> Ingles
+            </label>
+            <label>
+                <input type="radio" name="Lenguaje" value="por"> Portugues
+            </label>
+            <label>
+                <input type="radio" name="Lenguaje" value="fr"> Frances
+            </label>
+
+
+            <label>
+                <input type="radio" name="Lenguaje2" value="es" checked> Español
+            </label>
+
+            <label>
+                <input type="radio" name="Lenguaje2" value="quech"> Quechua
+            </label>
+
+            <label>
+                <input type="radio" name="Lenguaje2" value="ay"> Aymara
+            </label>
+            <label>
+                <input type="radio" name="Lenguaje2" value="pe" disabled> Peruano xD
+            </label>
+            <input type="submit" value="Guardar">
         </form>
 
     </main>
