--- a/Semana02/formulariostablasyotros/index.html
+++ b/Semana02/formulariostablasyotros/index.html
@@ -84,6 +84,39 @@
 
 
         </form>
+
+        <form>
+            <h2>Validaciones</h2>
+            <label></label>
+            
+            <label>
+                Email
+                <input type="email" name="email" placeholder="email@servidor.com" required />
+            </label>
+
+            <label>
+                telefono
+                <input type="tel" name="telefono" required pattern="\+[0-9]{2} [0-9]{9}" placeholder="+51 987654321" />
+            </label>
+
+            <label>
+                <input type="number" name="edad" required min="1" max="15"/>
+            </label>
+
+            <label>
+                Comidas
+                <select required name="comidas">
+                    <option value="">Selecciona tu comida favorita</option>
+                    <option value="aji">aji de gallina </option>
+                    <option value="pach">pachamanca </option>
+                    <option value="cuy">cuy </option>
+                    <option value="papa">papa rellena </option>
+                    <option value="sal">salchipapa </option>
+                </select>
+            </label>
+
+            <input type="submit" value="Guardar">
+        </form>
     </main>
         
 </body>
