Login con imagenes

--- a/Semana02/formulariostablasyotros/registrar.html
+++ b/Semana02/formulariostablasyotros/registrar.html
@@ -22,9 +22,8 @@
  
 
         <form>
-            <center><img src="https://placehold.co/80.png?text={VV}" /></center>
             <hgroup>
-                <h1> Login</h1>
+                <h1> Registrarte</h1>
                 <h2> Ingrese la informacion con la que te registrasete</h2>
             </hgroup>
             <label>
